<resources>

    <string name="app_name">Fishbook</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="authenticating">Authenticating...</string>
    <string name="failed">failed</string>
    <string name="regions">Top fishing regions</string>
    <string name="chased_species">Most chased species</string>
    <string name="fishing_methods">Fishing methods</string>

    <string name="log_your_catches">Log your catches in an easy way with detailed information</string>
    <string name="capture_and_share_snapshots">Capture and share snapshots from your fishing adventures</string>
    <string name="explore_pictures_and_catches">Explore pictures and catches you might like</string>
    <string name="discover_interesting_anglers">Discover interesting anglers</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="search_hint">Search for species, regions, etc...</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_sign_up">Sign up failed.</string>
    <string name="action_settings">Settings</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="title_activity_post">Post to Fishbook</string>
    <string name="hint_whats_on_your_mind">What\'s on your mind?</string>
    <string name="hint_say_something_about_these_photos">Say something about these photos...</string>
    <string name="hint_say_something_about_this_photo">Say something about this photo...</string>
    <string name="hint_add_caption">Add a caption...</string>
    <string name="where_did_you_catch_this">Where did you catch this?</string>
    <string name="what_are_the_species">What are the species on this photos?</string>
    <string name="how_do_you_catch">How do you catch this?</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>