<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp"
    android:layout_weight="1"
    android:overScrollMode="never"
    tools:context="com.valchev.plamen.fishbook.home.PostActivity"
    tools:showIn="@layout/activity_post">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/profile_picture"
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:roundingBorderWidth="3dp"
                app:roundingBorderColor="@android:color/white"
                app:backgroundImage="@android:color/white"
                app:placeholderImage="@mipmap/ic_person_black_48dp" />

            <TextView
                android:id="@+id/display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <EditText
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minLines="1"
            android:hint="@string/hint_whats_on_your_mind"
            android:background="@android:color/transparent"/>

        <com.pchmn.materialchips.ChipsInput
            android:id="@+id/fishing_chips_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:visibility="gone"
            app:maxRows="1"
            app:hint="@string/where_did_you_catch_this"
            app:chip_deletable="true"
            app:showChipDetailed="false"/>

        <com.pchmn.materialchips.ChipsInput
            android:id="@+id/species_chips_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:visibility="gone"
            app:maxRows="1"
            app:hint="@string/what_are_the_species"
            app:chip_deletable="true"
            app:showChipDetailed="false"/>

        <com.pchmn.materialchips.ChipsInput
            android:id="@+id/method_chips_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:visibility="gone"
            app:maxRows="1"
            app:hint="@string/how_do_you_catch"
            app:chip_deletable="true"
            app:showChipDetailed="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/recycler_view_layout"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/main_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:clickable="true"
                android:overScrollMode="never"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sub_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:visibility="gone"
                android:clickable="true"
                android:overScrollMode="never"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
